tests/miniJava/pos/001099_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) while ( 0 ) { } else System.out.println ( { } ) ; } }
