tests/miniJava/neg/005257_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] System.out.println ( ) { return 0 ; } }
